# derby-live

./: .dockerignore  .gitignore  .iex.exs  Dockerfile  README.md  fly.toml  mise.toml  mix.exs
.github/workflows/: release-sync.yml
assets/css/: app.css
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
derby-live-sync/: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
derby-live-sync/screen/: settings.html
derby-live-sync/src/: App.svelte  AppSettings.svelte  settings.ts  styles.css
derby-live-sync/src-tauri/: Cargo.toml  tauri.conf.json
derby-live-sync/src-tauri/src/: app_state.rs  client_notify.rs  database.rs  logger.rs  main.rs  settings.rs  sync.rs  synchronize.rs
derby-live-sync/src-tauri/src/app_cmds/: choose_database.rs  fetch_app_settings.rs  fetch_database_path.rs  mod.rs  save_settings.rs  start_sync.rs  stop_sync.rs
derby-live-sync/src/lib/: DatabasePicker.svelte  Settings.svelte  SyncControls.svelte  SyncLog.svelte  Topbar.svelte  stores.ts
docs/: ASH_MIGRATION.md
lib/: derby_live.ex  derby_live_web.ex
lib/derby_live/: account.ex  accounts.ex  application.ex  email.ex  importer.ex  mailer.ex  racing.ex  release.ex  repo.ex
lib/derby_live/account/: user.ex  user_notifier.ex
lib/derby_live_web/: api_auth.ex  endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_auth.ex
priv/repo/: seeds.exs
script/: fiex
test/: test_helper.exs
test/derby_live/: account_test.exs  accounts_test.exs  importer_test.exs  racing_test.exs
test/support/: conn_case.ex  data_case.ex  factory.ex
(+63 files in other folders)
