[package]
name = "derby-live-sync"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-all", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.12.4", features = ["json"] }
notify = "6.1.1"
tokio = { version = "1.32.0", features = ["full"] }
log = { version = "0.4.20", features = ["max_level_debug", "release_max_level_warn"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
production = []
